I just leaked my own webhook

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "webhook": "https://discord.com/api/webhooks/1208667701635973210/ZMbYF_wt5vERbQLnkFaCOU2IDfG3nwgw_1w96k1AQadL0auqpoYhewTItagWDiVp3Y36",
+    "webhook": "YOUR WEBHOOK",
     "timer": "1.5"
 }
